# twitchypy-irc

./: .gitignore  LICENSE  README.md  pyproject.toml
src/twitchypy_irc/: twitch.py
twitch/: __init__.py  twitch.py
