[tool.poetry]
name = "twitchypy_irc"
version = "0.1.1"
description = "Allows you to connect to Twitch IRC and send and receive messages."
authors = ["Elena Loonstra <eloonstra@pm.me>"]
readme = "README.md"
packages = [{ include = "twitch" }]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

